<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QADiagnoseActivity"
    android:background="@color/graylight">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true">
    <moe.feng.common.stepperview.VerticalStepperItemView
        android:id="@+id/step_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:step_index="1"
        app:step_title="Animal type"
        app:step_activated_color="@color/colorAccent"
        app:step_state="selected">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qa_q1_layout"
            android:orientation="vertical">
            <TextView
                android:id="@+id/qa_q1_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="What animal do you want to diagnose?"/>
            <RadioGroup
                android:id="@+id/qa_q1_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cow" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/goat"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/pig" />
            </RadioGroup>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="10dp"
               android:paddingEnd="10dp"
               android:gravity="end">
               <Button
                   android:id="@+id/step_1_nextBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="next"
                   />
           </LinearLayout>
        </LinearLayout>
    </moe.feng.common.stepperview.VerticalStepperItemView>
    <moe.feng.common.stepperview.VerticalStepperItemView
        android:id="@+id/step_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:step_index="2"
        app:step_title="Symptoms"
        app:step_activated_color="@color/colorAccent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">
            <TextView
                android:id="@+id/qa_q2_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"
                android:text="@string/which_of_the_following_symptoms_have_you_noticed_select_all_that_applies"/>
            <CheckBox
                android:id="@+id/check_sym1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fever"/>
            <CheckBox
                android:id="@+id/check_sym2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bilsters_in_the_mouth_and_feet"/>
            <CheckBox
                android:id="@+id/check_sym3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_loss"/>
            <CheckBox
                android:id="@+id/check_sym4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loss_of_appetite"/>
            <CheckBox
                android:id="@+id/check_sym5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_in_milk_production"/>
            <CheckBox
                android:id="@+id/check_sym6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lameness"/>
            <CheckBox
                android:id="@+id/check_sym7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weakness"/>
            <CheckBox
                android:id="@+id/check_sym8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abortion"/>
            <CheckBox
                android:id="@+id/check_sym9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rapid_breathing"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:gravity="end">
                <Button
                    android:id="@+id/step_2_prevBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="back"/>
                <Button
                    android:id="@+id/step_2_nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="next"
                    />
            </LinearLayout>
        </LinearLayout>
    </moe.feng.common.stepperview.VerticalStepperItemView>
    <moe.feng.common.stepperview.VerticalStepperItemView
        android:id="@+id/step_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:step_index="3"
        app:step_title="Other signs"
        app:step_activated_color="@color/colorAccent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/qa_q3_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/has_it_affected_other_animals"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_marginTop="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/not_sure"
                    android:layout_marginTop="10dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/qa_q4_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/has_any_amimal_died_recently"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_marginTop="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_sure"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"/>
            </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:gravity="end">
            <Button
                android:id="@+id/step_3_prevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="back"/>
            <Button
                android:id="@+id/step_3_nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="next"
                />
        </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </moe.feng.common.stepperview.VerticalStepperItemView>
    <moe.feng.common.stepperview.VerticalStepperItemView
        android:id="@+id/step_view_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:step_index="4"
        app:step_title="Diagnose"
        app:step_is_last="true"
        app:step_activated_color="@color/colorAccent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <Button
            android:id="@+id/qa_diagnose_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:textSize="23sp"
            android:text="@string/diagnose" />
        <Button
            android:id="@+id/step_4_prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="back"/>
      </LinearLayout>
    </moe.feng.common.stepperview.VerticalStepperItemView>
</LinearLayout>
</ScrollView>